@@ -2091,8 +2091,7 @@ enum : uint16_t
     STR_OPTIONS_LANGUAGE = 2776,
     STR_OPTIONS_DROPDOWN_ITEM = 2777,
     STR_OPTIONS_DROPDOWN_ITEM_SELECTED = 2778, // used as STR_OPTIONS_DROPDOWN_ITEM + 1
-    STR_VIEWPORT_NO = 2779,
-    STR_EXTRA_VIEWPORT = 2780,
+
     STR_SHORTCUT_ENTRY_FORMAT = 2781,
     STR_SHIFT_PLUS = 2782,
     STR_CTRL_PLUS = 2783,
