@@ -2,6 +2,7 @@
 ------------------------------------------------------------------------
 - Feature: [#21376] Add option to reload an object (for object developers).
 - Improved: [#21356] Resize the title bar when moving between displays with different scaling factors on Windows systems.
+- Removed: [#21397] “Extra viewport” option.
 - Fix: [#18963] Research table in parks from Loopy Landscapes is imported incorrectly.
 - Fix: [#20907] RCT1/AA scenarios use the 4-across train for the Inverted Roller Coaster.
 - Fix: [#21208] Error message will stay open only for a brief moment when the game has been running a while.
